Reduced cards wrapper width to avoid overflow issue.

--- a/assets/scss/core.scss
+++ b/assets/scss/core.scss
@@ -4,6 +4,7 @@ $transition: all 500ms ease-in-out;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 2rem;
+	width: 90vw;
 }
 
 .card {
