--- a/assets/scss/media-queries.scss
+++ b/assets/scss/media-queries.scss
@@ -1,6 +1,7 @@
 @media (max-width: 1024px) {
 	.cards-wrapper {
 		grid-template-columns: auto;
+		width: auto;
 	}
 }
 
